# SEEr

./: .gitmodules  README.md
Mini-App-runscripts/: miniapp.sh  miniapp_mantis.sh  miniapp_polaris.sh  miniapp_thetagpu.sh  wallclock_runtime.sh
Mini-App/app_build/: CMakeCache.txt  Makefile  app  cmake_install.cmake  eigenvectors.npy  ml_module.py.hunter  python_module.py  smi-out.csv
Mini-App/app_build/checkpoints/: my_checkpoint.data-00000-of-00001  my_checkpoint.index
Polaris-Mini-Apps/miniapp_A/: app.cpp
Polaris-Mini-Apps/miniapp_A/app_build/: CMakeCache.txt  Makefile  app
Polaris-Mini-Apps/miniapp_B/: app.cpp
Polaris-Mini-Apps/miniapp_B/app_build/: CMakeCache.txt  Makefile  eigenvectors.npy  perfTest.sh  python_module.py
Polaris-Mini-Apps/miniapp_C/app_build/: CMakeCache.txt  cmake_install.cmake  python_module.py
Polaris-Mini-Apps/miniapp_L/: app.cpp
Polaris-Mini-Apps/miniapp_L/app_build/: Makefile
Polaris-Mini-Apps/miniapp_M/app_build/: Makefile  app
Polaris-Mini-Apps/miniapp_S/: app.cpp
Polaris-Mini-Apps/miniapp_S/app_build/: CMakeCache.txt  Makefile  app  python_module.py
Polaris-Miniapps/miniapp_B/app_build/: app  (+2 more)
Polaris-Miniapps/miniapp_C/: app.cpp
Polaris-Miniapps/miniapp_S/: CMakeLists.txt
ThetaGPU-Mini-Apps/: README
ThetaGPU-Mini-Apps/miniappB/: CMakeLists.txt  out.csv
ThetaGPU-Mini-Apps/miniappB/app_build/: CMakeCache.txt  Makefile  app  cmake_install.cmake  out.csv
ThetaGPU-Mini-Apps/miniappE/: app.cpp
ThetaGPU-Mini-Apps/multigpu_miniapp/: app.cpp
runscripts/: aefoam.py  mantis-aefoam.yaml  run-mantis-aefoam.sh
(+74 files in other folders)
